@@ -87,7 +87,7 @@ public class BaseServletTester {
         server = new GHServer(args);
 
         if (injector == null)
-            setUpGuice(new DefaultModule(args), new GHServletModule(args));
+            setUpGuice(new GraphHopperModule(args), new GraphHopperServletModule(args));
 
         for (int i = 0; i < retryCount; i++) {
             port = 18080 + i;
