@@ -36,7 +36,7 @@ public class SpatialRuleLookupBuilderTest {
     @Test
     public void testIndex() {
         Reader reader = new InputStreamReader(SpatialRuleLookupBuilderTest.class.getResourceAsStream("countries.geo.json"));
-        SpatialRuleLookup spatialRuleLookup = DefaultModule.buildSpatialRuleLookup(reader, new BBox(-180, 180, -90, 90));
+        SpatialRuleLookup spatialRuleLookup = GraphHopperModule.buildSpatialRuleLookup(reader, new BBox(-180, 180, -90, 90));
 
         // Berlin
         assertEquals(AccessValue.EVENTUALLY_ACCESSIBLE, spatialRuleLookup.lookupRule(52.5243700, 13.4105300).getAccessValue("track", TransportationMode.MOTOR_VEHICLE, AccessValue.ACCESSIBLE));
@@ -55,7 +55,7 @@ public class SpatialRuleLookupBuilderTest {
     @Test
     public void testBounds() {
         Reader reader = new InputStreamReader(SpatialRuleLookupBuilderTest.class.getResourceAsStream("countries.geo.json"));
-        SpatialRuleLookup spatialRuleLookup = DefaultModule.buildSpatialRuleLookup(reader, new BBox(-180, 180, -90, 90));
+        SpatialRuleLookup spatialRuleLookup = GraphHopperModule.buildSpatialRuleLookup(reader, new BBox(-180, 180, -90, 90));
         BBox almostWorldWide = new BBox(-179, 179, -89, 89);
 
         // Might fail if a polygon is defined outside the above coordinates
@@ -69,14 +69,14 @@ public class SpatialRuleLookupBuilderTest {
             So the BBox should not contain a Point lying somewhere close in Germany.
          */
         Reader reader = new InputStreamReader(SpatialRuleLookupBuilderTest.class.getResourceAsStream("countries.geo.json"));
-        SpatialRuleLookup spatialRuleLookup = DefaultModule.buildSpatialRuleLookup(reader, new BBox(9, 10, 51, 52));
+        SpatialRuleLookup spatialRuleLookup = GraphHopperModule.buildSpatialRuleLookup(reader, new BBox(9, 10, 51, 52));
         assertFalse("BBox seems to be incorrectly contracted", spatialRuleLookup.getBounds().contains(49.9, 8.9));
     }
 
     @Test
     public void testNoIntersection() {
         Reader reader = new InputStreamReader(SpatialRuleLookupBuilderTest.class.getResourceAsStream("countries.geo.json"));
-        SpatialRuleLookup spatialRuleLookup = DefaultModule.buildSpatialRuleLookup(reader, new BBox(-180, -179, -90, -89));
+        SpatialRuleLookup spatialRuleLookup = GraphHopperModule.buildSpatialRuleLookup(reader, new BBox(-180, -179, -90, -89));
         assertNull(spatialRuleLookup);
     }
 }
